Replace Lombok with generated constructors and getters/setters from IDE part 5