@@ -182,19 +182,17 @@ public class StopTimeServiceTest {
      * @return a <code>StopTime</code> object which contains all data filled for a test StopTimeModel object.
      */
     private StopTime createStopTime (final LocalTime arrivalTime, final LocalTime departureTime, final String journeyNumber, final int count ) {
-        return StopTime.builder()
-                .arrivalTime(arrivalTime)
-                .departureTime(departureTime)
-                .destination("Greenfield")
-                .journeyNumber(journeyNumber)
-                .operatingDays(OperatingDays.builder()
-                        .operatingDays(Arrays.asList(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY, DayOfWeek.SATURDAY, DayOfWeek.SUNDAY))
-                        .specialOperatingDays(List.of(LocalDateTime.of(2020,12,25,0,0)))
-                        .build())
-                .routeNumber("405A")
-                .stopName("Lakeside")
-                .validFromDate(LocalDateTime.of(2020,12,12,0,0))
-                .validToDate(LocalDateTime.of(2021,12,11,0,0))
-                .build();
+        StopTime stopTime = new StopTime();
+        stopTime.setArrivalTime(arrivalTime);
+        stopTime.setDepartureTime(departureTime);
+        stopTime.setDestination("Greenfield");
+        stopTime.setJourneyNumber(journeyNumber);
+        stopTime.setOperatingDays(new OperatingDays(Arrays.asList(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY, DayOfWeek.SATURDAY, DayOfWeek.SUNDAY),
+                        List.of(LocalDateTime.of(2020,12,25,0,0)), null));
+        stopTime.setRouteNumber("405A");
+        stopTime.setStopName("Lakeside");
+        stopTime.setValidFromDate(LocalDateTime.of(2020,12,12,0,0));
+        stopTime.setValidToDate(LocalDateTime.of(2021,12,11,0,0));
+        return stopTime;
     }
 }
